Day 35 - Dynamic Pages menu routing finished and couple of bugs squashed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,3 +80,9 @@
 .categories-show{
 	margin-bottom: 20px;
 }
+
+.image-styling{
+	margin: auto;
+	width: 50%;
+
+}
